--- a/public/css/style.css
+++ b/public/css/style.css
@@ -976,6 +976,10 @@ video {
   align-items: center;
 }
 
+.justify-end {
+  justify-content: flex-end;
+}
+
 .justify-center {
   justify-content: center;
 }
